--- a/step15_Upload/src/main/resources/application.properties
+++ b/step15_Upload/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
 # DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/scott
+spring.datasource.url=jdbc:mysql://localhost:3306/scott?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999
 spring.datasource.username=scott
 spring.datasource.password=tiger
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,7 +9,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.enabled=true
 spring.jpa.properties.hibernate.format_sql=true
-#batch
-spring.jpa.properties.hibernate.generate_statistics=true
-spring.jpa.properties.hibernate.jdbc.batch_size=50
-spring.jpa.properties.hibernate.order_inserts=true
+
