--- a/step13_Boot_Basic/src/main/resources/application.properties
+++ b/step13_Boot_Basic/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/scott
+spring.datasource.url=jdbc:mysql://localhost:3306/scott?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999
 spring.datasource.username=scott
 spring.datasource.password=tiger
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
